# send-hot-it-news

./: .env.example  .gitignore  connection-map.html  erd-design.html  module-design.html  pyproject.toml  기능정리.md  모듈블럭 설계도.md
docs/: feature-spec-v2.md
docs/task-briefs/: app-frontend.md  backend-api.md  backend-db.md  dependency-graph.md  devops-engineer.md
launchd/: com.news-pulse.bot.plist
news_pulse/: __init__.py  __main__.py  cli_commands.py  orchestrator.py
news_pulse/blocks/: __init__.py  blacklist_analyzer.py  config_loader.py  data_cleaner.py  dedup.py  digest_formatter.py  error_notifier.py  health_checker.py  hot_news_detector.py  language_detector.py  memory_guard.py  message_formatter.py  model_usage_tracker.py  run_logger.py  skip_detector.py  subscriber_poller.py  telegram_sender.py  threshold_calibrator.py
news_pulse/blocks/filter/: __init__.py  (+4 more)
news_pulse/core/: __init__.py  digest_pipeline.py  fallback_chain.py  fetch_pipeline.py  filter_pipeline.py  send_pipeline.py  summarize_pipeline.py
news_pulse/db/: __init__.py  migrate.py  schema.sql  seed.sql  store.py  store_admin.py  store_analytics.py  store_cleanup.py  store_hot_news.py  store_model_usage.py  store_processed.py  store_prompts.py  store_schedule.py  store_subscribers.py  store_whitelist.py
news_pulse/models/: __init__.py  config.py  health.py  news.py  pipeline.py  telegram.py
news_pulse_app/: README.md  pubspec.yaml
news_pulse_app/lib/: app.dart  main.dart
news_pulse_app/test/: widget_test.dart
scripts/: health_check.sh  install_launchd.sh  setup.sh  uninstall_launchd.sh
(+156 files in other folders)
